--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pip>=10
 werkzeug==0.16.0
-flask
+flask>=1.1.2
 flask_httpauth==4.1.0
 redis
 gunicorn>=19
@@ -11,4 +11,3 @@ sentry-sdk[flask]==0.10.2
 nose2
 coverage
 jsonschema
-prometheus_client
