--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,4 @@ services:
     tty: true
   mongodb:
     restart: always
-    image: "mongodb:mongo:4.2.10-bionic"
+    image: "mongodb:4.2.10-bionic"
