--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ pip>=10
 werkzeug==0.16.0
 flask>=1.1.2
 redis
-gunicorn>=19
-gevent==1.4.0
+gunicorn==19.9.0
+gevent==1.3.4
+greenlet==0.4.13
 requests
 flake8
 sentry-sdk[flask]==0.10.2
